# pixtrap

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: models.yml  scoring.yml
data/: prompts_en.jsonl  prompts_ptbr.jsonl  sample_prompts_public.jsonl  taxonomy.yml
docs/: Copy of Global South AI Safety hackathon submission template.docx  Copy of Global South AI Safety hackathon submission template.md  annotation_guidelines.md  apart-hackathon.md  data_card.md  judging-criteria-and-submission-requirements.md  prompt_sourcing_and_inclusion.md  public_release_policy.md  scoring-for-5s-strategy.md  spec.md
pixtrap/: __init__.py  analysis.py  charts.py  config.py  dataset.py  providers.py  runner.py  scoring.py
report/: outline.md  pixtrap_report.tex  report.html  report.md  style.css  submission_checklist.md  submission_metadata.md  template_fill_checklist.md
results/raw/: results_final-kimi.jsonl  results_final.jsonl  results_pilot.jsonl  results_submission-final-v2.jsonl  results_submission-final.jsonl  smoke_test.jsonl
results/scored/: coverage_summary.csv  manual_audit_candidates.csv  manual_review.csv  (+5 more)
scripts/: analyze_results.py  build_report.sh  build_report_latex.sh  build_report_preview.sh  compute_audit_agreement.py  create_manual_audit_sample.py  export_public_dataset.py  run_eval.py  score_outputs.py  smoke_test_models.py  validate_dataset.py
submission/: additional_material.md  form_answers.md  project_image_notes.md  slides_outline.md  video_script.md
tests/: test_analysis.py  test_dataset.py  test_runner_resume.py  test_scoring.py
(+1 files in other folders)
