[project]
name = "pixtrap"
version = "0.1.0"
description = "Brazilian Portuguese Pix fraud and social-engineering safety benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["pixtrap"]

